# metapop-model

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  launch_app.py  manifest.json  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/actions/pre-commit/: run-pytest.yaml
.github/workflows/: mirror-to-cdcgov.yaml  pre-commit.yaml  run-tests.yaml  update_deploy.yaml
.streamlit/: config.toml
data/: fake_outbreak.csv
docs/: defining_beta.md
metapop/: __init__.py  advanced_app.py  app.py  app_helper.py  app_simple.py  app_with_table.py  helper.py  launch_app.py  model.py  plotting.py  sim.py  version.py
metapop/app_assets/: app_config.yaml  onepop_config.yaml
scripts/: 01_visualize_time_curves.py  analyzer.R  app_config.yaml  config.yaml  config_measles.yaml  example_new_beta_calculation.py  make_plots.R  make_plots.ipynb  make_plots.py  plot.qmd  run_abc.py  simulate.py  simulate_measles.py
scripts/app/: app_config.yaml  onepop_config.yaml
scripts/comparison/: comparison_config.yaml  comparison_results_post_processing.R  comparison_simulate.py
scripts/connectivity/: config.yaml  make_plots.R  simulate.py
scripts/interventions/: intervention_config.yaml  intervention_plots.R  intervention_simulate.py
scripts/misc/: example_new_beta_calculation.py  make_plots.py  make_plots.qmd  run_abc.py
scripts/onepop/: onepop_config.yaml  onepop_plots.R  onepop_simulate.py
scripts/timing/: timing_config.yaml  timing_results_post_processing.R  timing_simulate.py
scripts_interventions/: intervention_config.yaml  intervention_plots.R  intervention_simulate.py
scripts_isolation/: isolation_config.yaml  isolation_plots.R  isolation_simulate.py
scripts_one_pop/: one_pop_config.yaml  one_pop_plots.R  one_pop_simulate.py
scripts_uptake/: uptake_config.yaml  uptake_plots.R  uptake_simulate.py
sir/: __init__ measles.py  __init__.py  __init__measles.py  pyproject.toml
sir/sir/: __init__.py
stlite/: griddler-0.2.0-py3-none-any.whl  index.html  launch_stlite.py  make_measles_sim_html.py  metapop-0.4.0-py2.py3-none-any.whl
tests/: test_app.py  test_app_helper.py  test_config.yaml  test_helper.py  test_metapop.py  test_model.py  test_simulate.py  test_sir.py  test_vaccine_schedules.py
