[tool.poetry]
name = "metapop"
version = "0.1.0"
description = ""
authors = ["Paige Miller <yub1@cdc.gov>", "Theresa Sheets <utg8@cdc.gov>", "Dina Mistry <uqx8@cdc.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.2.0"
griddler = {git = "https://github.com/CDCgov/pygriddler.git", tag = "v0.2"}
polars = "^1.17.1"
altair = "^5.5.0"
matplotlib = "^3.10.0"
pytest = "^8.3.4"
pyarrow = "^19.0.1"
seaborn = "^0.13.2"
streamlit = "^1.43.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pre-commit = "^4.0.1"
detect-secrets = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore = ['E741']
