[tool.poetry]
name = "metapop"
version = "0.4.15"
description = ""
authors = [
    "Paige Miller <yub1@cdc.gov>",
    "Theresa Sheets <utg8@cdc.gov>",
    "Will Koval <ad71@cdc.gov>",
    "Beau B. Bruce <lue7@cdc.gov>",
    "Dina Mistry <uqx8@cdc.gov>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pandas = "^2.2.3"
numpy = ">=1.22.4, <2.3.0"
griddler = { git = "https://github.com/CDCgov/pygriddler.git", tag = "v0.2" }
polars = "^1.17.1"
altair = "^5.5.0"
matplotlib = "^3.10.0"
pytest = "^8.3.4"
pyarrow = "^19.0.1"
seaborn = "^0.13.2"
streamlit = "^1.43.2"
st_flexible_callout_elements = "0.1.0"
build = "^1.2.2.post1"
bs4 = "^0.0.2"
rsconnect-python = "^1.25.2"
scipy = "1.13.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pre-commit = "^4.0.1"
detect-secrets = "^1.5.0"

[project]
name = "metapop"
version = "0.4.15"
description = ""
authors = [
    { name = "Paige Miller", email = "yub1@cdc.gov" },
    { name = "Theresa Sheets", email = "utg8@cdc.gov" },
    { name = "Will Koval", email = "ad71@cdc.gov" },
    { name = "Dina Mistry", email = "uqx8@cdc.gov" },
    { name = "Beau B. Bruce", email = "lue7@cdc.gov" },
]
readme = "README.md"

[build-system]
requires = ["hatchling == 1.21"]
build-backend = "hatchling.build"

[tool.ruff.lint]
ignore = ['E741']

[tool.ruff]
extend-exclude = ["stlite/launch_stlite.py"]
